# togetherai-playground

./: .gitignore  README.md  pyproject.toml  res.json
scripts/: start.py
src/: config.py  configs.py  main.py
src/chat_llms/: base.py  openai.py  togetherai.py
src/llms/: base.py  openai.py  together_ai.py  togetherai.py
tests/chat_llms/: test_chat_openai.py  test_chat_togetherai.py
tests/llms/: test_openai.py  test_together_ai.py  test_togetherai.py
